refactor: rename Cliente to Customer and update related methods for consistency